change uri to url

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 eave/resource/*  linguist-vendored
 *.html  linguist-vendored
 *.raml  linguist-vendored
+*.yaml  linguist-vendored
+*.json  linguist-vendored
